--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=ProCyclingScraper
+
+spring.datasource.password=admin
+spring.datasource.username=admin
+spring.datasource.url=jdbc:postgresql://localhost:5428/cycling_manager_db
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=create
