--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgis/postgis
+    image: postgres:16-alpine
     restart: always
     environment:
       POSTGRES_PASSWORD: admin
