--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 spring.application.name=ProCyclingScraper
+server.port=8080
+# logging.level.org.springframework.jdbc=DEBUG
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.com.zaxxer.hikari=DEBUG
 
-spring.datasource.password=admin
-spring.datasource.username=admin
-spring.datasource.url=jdbc:postgresql://localhost:5428/cycling_manager_db
+
+# PostgreSQL RDS connection settings
+spring.datasource.url=jdbc:postgresql://aws-0-eu-west-2.pooler.supabase.com:6543/postgres
+spring.datasource.username=postgres.tbkjkpkwzflleubhlzic
+spring.datasource.password=f03wfAsaAjUe5bYJ
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-# spring.jpa.hibernate.ddl-auto=create-drop
+
+# JPA / Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
-
-
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
