--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,25 @@
+# Application Info
 spring.application.name=ProCyclingScraper
 server.port=8080
-# logging.level.org.springframework.jdbc=DEBUG
-# logging.level.org.hibernate.SQL=DEBUG
-# logging.level.com.zaxxer.hikari=DEBUG
 
-# PostgreSQL RDS connection settings
-spring.datasource.url=jdbc:postgresql://aws-0-eu-west-2.pooler.supabase.com:6543/postgres
-spring.datasource.username=postgres.tbkjkpkwzflleubhlzic
+# === PostgreSQL RDS Settings ===
+spring.datasource.url=jdbc:postgresql://db.tbkjkpkwzflleubhlzic.supabase.co:5432/postgres
+spring.datasource.username=postgres
 spring.datasource.password=f03wfAsaAjUe5bYJ
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA / Hibernate settings
+# === Connection Pool (HikariCP is default) ===
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+
+# === JPA / Hibernate ===
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.generate_statistics=true
+
+# === Logging (Optional) ===
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
