--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=ProCyclingScraper
 server.port=8080
 
 # === PostgreSQL RDS Settings ===
-spring.datasource.url=jdbc:postgresql://db.tbkjkpkwzflleubhlzic.supabase.co:5432/postgres?sslmode=require
+spring.datasource.url=jdbc:postgresql://db.tbkjkpkwzflleubhlzic.supabase.co:5432/postgres?user=postgres&password=f03wfAsaAjUe5bYJ
 spring.datasource.username=postgres
 spring.datasource.password=f03wfAsaAjUe5bYJ
 spring.datasource.driver-class-name=org.postgresql.Driver
