--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=ProCyclingScraper
 server.port=8080
 
 # === PostgreSQL RDS Settings ===
-spring.datasource.url=jdbc:postgresql://db.tbkjkpkwzflleubhlzic.supabase.co:5432/postgres?user=postgres&password=f03wfAsaAjUe5bYJ
+spring.datasource.url=jdbc:postgresql://db.tbkjkpkwzflleubhlzic.supabase.co:5432/postgres
 spring.datasource.username=postgres
-# spring.datasource.password=f03wfAsaAjUe5bYJ
+spring.datasource.password=f03wfAsaAjUe5bYJ
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # === Connection Pool (HikariCP is default) ===
@@ -15,7 +15,7 @@ spring.datasource.hikari.max-lifetime=1800000
 
 # === JPA / Hibernate ===
 spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.generate_statistics=true
