--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=ProCyclingScraper
 server.port=8080
 
 # === PostgreSQL RDS Settings ===
-spring.datasource.url=jdbc:postgresql://db.tbkjkpkwzflleubhlzic.supabase.co:5432/postgres?sslmode=require
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://aws-0-eu-west-2.pooler.supabase.com:6543/postgres
+spring.datasource.username=postgres.tbkjkpkwzflleubhlzic
 spring.datasource.password=f03wfAsaAjUe5bYJ
 spring.datasource.driver-class-name=org.postgresql.Driver
 
