Update PostgreSQL datasource URL to include prepareThreshold parameter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=ProCyclingScraper
 server.port=8080
 
 # === PostgreSQL RDS Settings ===
-spring.datasource.url=jdbc:postgresql://aws-0-eu-west-2.pooler.supabase.com:6543/postgres
+spring.datasource.url=jdbc:postgresql://aws-0-eu-west-2.pooler.supabase.com:6543/postgres?prepareThreshold=0
 spring.datasource.username=postgres.tbkjkpkwzflleubhlzic
 spring.datasource.password=f03wfAsaAjUe5bYJ
 spring.datasource.driver-class-name=org.postgresql.Driver
