--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,12 +15,12 @@ spring.datasource.hikari.max-lifetime=1800000
 
 # === JPA / Hibernate ===
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.generate_statistics=true
 
 # === Logging (Optional) ===
-logging.level.org.springframework.jdbc=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.com.zaxxer.hikari=DEBUG
-logging.level.org.hibernate.engine.jdbc.connections=DEBUG
+# logging.level.org.springframework.jdbc=DEBUG
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.com.zaxxer.hikari=DEBUG
+# logging.level.org.hibernate.engine.jdbc.connections=DEBUG
