Update CORS configuration to allow all origins and modify database connection settings in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,10 @@
-# Application Info
 spring.application.name=ProCyclingScraper
-server.port=8080
 
-# === PostgreSQL RDS Settings ===
-spring.datasource.url=jdbc:postgresql://aws-0-eu-west-2.pooler.supabase.com:6543/postgres?prepareThreshold=0
-spring.datasource.username=postgres.tbkjkpkwzflleubhlzic
-spring.datasource.password=f03wfAsaAjUe5bYJ
+spring.datasource.password=admin
+spring.datasource.username=admin
+spring.datasource.url=jdbc:postgresql://localhost:5428/cycling_manager_db
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-# === Connection Pool (HikariCP is default) ===
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.max-lifetime=1800000
-
-# === JPA / Hibernate ===
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.hibernate.ddl-auto=create-drop  
 spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.generate_statistics=false
+#spring.jpa.show-sql=true
