Update PostgreSQL credentials in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,12 @@ server.port=8080
 
 # === PostgreSQL RDS Settings ===
 spring.datasource.url=jdbc:postgresql://aws-0-eu-west-2.pooler.supabase.com:6543/postgres?prepareThreshold=0
-spring.datasource.username=postgres.tbkjkpkwzflleubhlzic
-spring.datasource.password=f03wfAsaAjUe5bYJ
+spring.datasource.username=postgres.aiwfavcqwdggklsimfcf
+spring.datasource.password=S-#5gEPUwHmWtTt
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # === Connection Pool (HikariCP is default) ===
-spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.maximum-pool-size=10   
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
 
